--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-target/
+/target
+/build
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -9,3 +10,4 @@ buildNumber.properties
 /.classpath
 /.project
 /.settings
+/.gradle
