--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ jar {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://repository.apache.org/content/groups/snapshots/"
+    }
 }
 
 sourceCompatibility = 1.8
@@ -33,7 +36,7 @@ dependencies {
     // tag::actuator[]
     compile("org.springframework.boot:spring-boot-starter-actuator")
     // end::actuator[]
-    compile("org.apache.pdfbox:pdfbox:1.8.9")
+    compile("org.apache.pdfbox:pdfbox-app:2.0.0-SNAPSHOT")
     testCompile("junit:junit")
 }
 
