--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,18 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.2.3.RELEASE</version>
     </parent>
-
+    
+    <repositories>
+	    <repository>
+		  <id>ApacheSnapshot</id>
+		  <name>Apache Repository</name>
+		  <url>https://repository.apache.org/content/groups/snapshots/</url>
+		  <snapshots>
+		    <enabled>true</enabled>
+		  </snapshots>
+		</repository>
+	</repositories>
+    
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -33,10 +44,10 @@
             <artifactId>spring-boot-starter-jersey</artifactId>
         </dependency>
         <dependency>
-        	<groupId>org.apache.pdfbox</groupId>
-        	<artifactId>pdfbox</artifactId>
-        	<version>1.8.9</version>
-        </dependency>
+		  <groupId>org.apache.pdfbox</groupId>
+		  <artifactId>pdfbox-app</artifactId>
+		  <version>2.0.0-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
     <properties>
