--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'java'
 apply plugin: 'spring-boot'
 
 jar {
-    baseName = 'pdfserv'
+    baseName = 'docserv'
     version =  '1.0.0'
 }
 
